2003-03-19  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* tests/compile.test: bad command count on TCL_OUT_LINE_COMPILE
	[Bug 705406] (Don Porter).

2003-03-19  Don Porter  <dgp@users.sourceforge.net>

	* doc/Eval.3 (Tcl_EvalObjEx):			Corrected CONST and
	* doc/ParseCmd.3 (Tcl_EvalTokensStandard):	return type errors
	in documentation.  [Bug 683994]

2003-03-18  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tests/registry.test: Changed the conditionals to avoid an
	abort if [testlocale] is missing, as when running the test in
	tclsh rather than tcltest. [Bug #705677]
	
2003-03-18  Daniel Steffen  <das@users.sourceforge.net>

	* tools/tcltk-man2html.tcl: added support for building 'make html'
	from inside distribution directories named with 8.x.x version
	numbers. tcltk-man2html now uses the latest tcl8.x.x resp. tk8.x.x
	directories found inside its --srcdir argument.

2003-03-18  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/cmdAH.test: fix test suite problem if /home is a symlink
	* generic/tclIOUtil.c: fix bad error message with 'cd ""'
	* win/tclWinFile.c: allow Tcl to differentiate between reparse
	points which are symlinks and mounted drives.
	
	These changes fix [Bug #703264], [Bug #704917], [Bug #697862]
	respectively.

2003-03-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/lsearch.n:	Altered documentation of -ascii options so
	* doc/lsort.n:		they don't specify that they operate on
				ASCII strings, which they never did
				anyway.  [Bug #703807]

2003-03-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FileObjCmd): Remove assumption that file
	times and longs are the same size.  [Bug #698146]
	(Tcl_FormatObjCmd): Stop surprising type conversions from
	happening when working with integer and wide values.  [Bug #699060]

	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Only add the modifier
	that indicates we've got a wide int when we're formatting in an